# refactor-arena-evals

./: .gitignore  README.md  justfile  pyproject.toml
.dvc/: config
configs/: large-sonnet4-100.yaml
data/: monitor-scores.csv
data/fprs/: gpt-4-1-nano.csv  gpt-4o.csv  gpt-5-4.csv  haiku-4-5.csv  opus-4-6.csv  sonnet-4.csv
data/safety/: gpt-4o.csv  haiku-4-5.csv  opus-4-6.csv  sonnet-4.csv
runs/attacks/: .gitignore  exports.dvc  logs.dvc
runs/honest-baselines/: exports.dvc  logs.dvc
scripts/: build_roc_safety_charts.py
